SERVER-73229 Throw on write errors in session refresh

(cherry picked from commit 447b425584090e2d11ad11bbd01ecb12c37294f4)